--- a/index.html
+++ b/index.html
@@ -10,14 +10,18 @@
 
 <body>
  <div class="site-wrapper">
-  <header class="stie-header">
+  <header class="site-content">
    Header content goes here...
   </header>
   <!-- Site Header -->
 
   <main class="site-content">
    <section class="block-hero">
-    Hero content goes here...
+    <button class="block-hero-btn">ADVENTURE</button>
+    <h1>Richird Norton photorealistic rendering as real photos</h1>
+    <p class="block-hero-date">08.08.2021</p>
+    <div class="block-hero-line"></div>
+    <p class="block-hero-content">Progressively incentivize cooperative systems through technically sound functionalities. The credibly productivate seamless data.</p>
    </section>
    <!-- Hero Section -->
 
