Updated popular topics section and css

--- a/index.html
+++ b/index.html
@@ -2,42 +2,58 @@
 <html lang="en">
 
 <head>
- <meta charset="UTF-8">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <link rel="stylesheet" href="./style.css">
- <title>Runo</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
+    <title>Runo</title>
 </head>
 
 <body>
- <div class="site-wrapper">
-  <header class="site-content">
-   Header content goes here...
-  </header>
-  <!-- Site Header -->
+    <div class="site-wrapper">
+        <header class="site-content">
+            Header content goes here...
+        </header>
+        <!-- Site Header -->
 
-  <main class="site-content">
-   <section class="block-hero">
-    <button class="block-hero-btn">ADVENTURE</button>
-    <h1>Richird Norton photorealistic rendering as real photos</h1>
-    <p class="block-hero-date">08.08.2021</p>
-    <div class="block-hero-line"></div>
-    <p class="block-hero-content">Progressively incentivize cooperative systems through technically sound functionalities. The credibly productivate seamless data.</p>
-   </section>
-   <!-- Hero Section -->
+        <main class="site-content">
+            <section class="block-hero">
+                <button class="block-hero-btn">ADVENTURE</button>
+                <h1>Richird Norton photorealistic rendering as real photos</h1>
+                <p class="block-hero-date">08.08.2021</p>
+                <div class="block-hero-line"></div>
+                <p class="block-hero-content">Progressively incentivize cooperative systems through technically sound
+                    functionalities. The credibly productivate seamless data.</p>
+            </section>
+            <!-- Hero Section -->
 
-   <section class="block-popular">
-    popular section content goes here...
-   </section>
-   <!-- Popular Section -->
+            <section class="block-popular container">
+                <h2>Popular topics</h2>
+                <div class="block-popular__nav">
+                    <div class="block-popular__left-nav">
+                        <ul class="left-nav">
+                            <li><a href="#">All</a></li>
+                            <li><a href="#">Adventure</a></li>
+                            <li><a href="#">Travel</a></li>
+                            <li><a href="#">Fashion</a></li>
+                            <li><a href="#">Technology</a></li>
+                            <li><a href="#">Branding</a></li>
+                        </ul>
+                    </div>
+                    <div class="block-popular__right-nav">
+                        <a href="#">View All</a>
+                    </div>
+                </div>
+            </section>
+            <!-- Popular Section -->
 
-  </main>
-  <!-- Site Content -->
+        </main>
+        <!-- Site Content -->
 
-  <footer class="site-footer">
-   Footer content goes here...
-  </footer>
-  <!-- Site Footer -->
- </div>
+        <footer class="site-footer">
+            Footer content goes here...
+        </footer>
+        <!-- Site Footer -->
+    </div>
 </body>
 
 </html>
