style the hero section

--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
                 <div class="block-hero-line"></div>
                 <p class="block-hero-content">Progressively incentivize cooperative systems through technically sound
                     functionalities. The credibly productivate seamless data.</p>
+                    <div class="block-hero-circle">
+                        <img src="./assets/images/point-1.png" width="8px" height="8px">
+                        <img src="./assets/images/point-2.png" width="8px" height="8px">
+                        <img src="./assets/images/point-3.png" width="8px" height="8px">
+                      </div>
+
             </section>
             <!-- Hero Section -->
 
