added popular cards and style cards popular card section

--- a/index.html
+++ b/index.html
@@ -49,6 +49,72 @@
                         <a href="#">View All</a>
                     </div>
                 </div>
+
+                <div class="Popular-card-section">
+                    <div class="Popular-card">
+                      <img src="./assets/images/popular-blog-img-1.jpg" alt="Card image" width="310px" height="280px" border-radius="5px">
+                      <p class="Popular-card-date">08.08.2021</p>
+                        <h4 class="Popular-card-header">Dream destinations to visit thisyear in Paris</h4>
+                        <p class="Popular-card-description">Progressively incentivize cooperative systems through technically sound
+                          functionalities. Credibly productivate seamless data with flexible schemas.</p>
+                    </div>
+
+                    <div class="Popular-card-1">
+                        <img src="./assets/images/popular-blog-img-1.jpg" alt="Card image" width="310px" height="280px" border-radius="5px">
+                        <p class="Popular-card-date">08.08.2021</p>
+                          <h4 class="Popular-card-header">Dream destinations to visit thisyear in Paris</h4>
+                          <p class="Popular-card-description">Progressively incentivize cooperative systems through technically sound
+                            functionalities. Credibly productivate seamless data with flexible schemas.</p>
+                      </div>
+
+                      <div class="Popular-card-1">
+                        <img src="./assets/images/popular-blog-img-1.jpg" alt="Card image" width="310px" height="280px" border-radius="5px">
+                        <p class="Popular-card-date">08.08.2021</p>
+                          <h4 class="Popular-card-header">Dream destinations to visit thisyear in Paris</h4>
+                          <p class="Popular-card-description">Progressively incentivize cooperative systems through technically sound
+                            functionalities. Credibly productivate seamless data with flexible schemas.</p>
+                      </div>
+
+                      <div class="Popular-card-1">
+                        <img src="./assets/images/popular-blog-img-1.jpg" alt="Card image" width="310px" height="280px" border-radius="5px">
+                        <p class="Popular-card-date">08.08.2021</p>
+                          <h4 class="Popular-card-header">Dream destinations to visit thisyear in Paris</h4>
+                          <p class="Popular-card-description">Progressively incentivize cooperative systems through technically sound
+                            functionalities. Credibly productivate seamless data with flexible schemas.</p>
+                      </div>
+
+                      <div class="Popular-card">
+                        <img src="./assets/images/popular-blog-img-1.jpg" alt="Card image" width="310px" height="280px" border-radius="5px">
+                        <p class="Popular-card-date">08.08.2021</p>
+                          <h4 class="Popular-card-header">Dream destinations to visit thisyear in Paris</h4>
+                          <p class="Popular-card-description">Progressively incentivize cooperative systems through technically sound
+                            functionalities. Credibly productivate seamless data with flexible schemas.</p>
+                      </div>
+
+                      <div class="Popular-card-1">
+                        <img src="./assets/images/popular-blog-img-1.jpg" alt="Card image" width="310px" height="280px" border-radius="5px">
+                        <p class="Popular-card-date">08.08.2021</p>
+                          <h4 class="Popular-card-header">Dream destinations to visit thisyear in Paris</h4>
+                          <p class="Popular-card-description">Progressively incentivize cooperative systems through technically sound
+                            functionalities. Credibly productivate seamless data with flexible schemas.</p>
+                      </div>
+
+                      <div class="Popular-card-1">
+                        <img src="./assets/images/popular-blog-img-1.jpg" alt="Card image" width="310px" height="280px" border-radius="5px">
+                        <p class="Popular-card-date">08.08.2021</p>
+                          <h4 class="Popular-card-header">Dream destinations to visit thisyear in Paris</h4>
+                          <p class="Popular-card-description">Progressively incentivize cooperative systems through technically sound
+                            functionalities. Credibly productivate seamless data with flexible schemas.</p>
+                      </div>
+
+                      <div class="Popular-card-1">
+                        <img src="./assets/images/popular-blog-img-1.jpg" alt="Card image" width="310px" height="280px" border-radius="5px">
+                        <p class="Popular-card-date">08.08.2021</p>
+                          <h4 class="Popular-card-header">Dream destinations to visit thisyear in Paris</h4>
+                          <p class="Popular-card-description">Progressively incentivize cooperative systems through technically sound
+                            functionalities. Credibly productivate seamless data with flexible schemas.</p>
+                      </div>
+                  </div>
                 
             </section>
             <!-- Popular Section -->
