style the hero content section

--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
             <section class="block-hero">
                 <button class="block-hero-btn">ADVENTURE</button>
                 <h1>Richird Norton photorealistic rendering as real photos</h1>
-                <p class="block-hero-date">08.08.2021</p>
+                <div class="block-hero-content-wrap">
+                  <p class="block-hero-date">08.08.2021</p>
                 <div class="block-hero-line"></div>
-                <p class="block-hero-content">Progressively incentivize cooperative systems through technically sound
+                <p class="block-hero-description">Progressively incentivize cooperative systems through technically sound
                     functionalities. The credibly productivate seamless data.</p>
+                </div>
                     <div class="block-hero-circle">
                         <img src="./assets/images/point-1.png" width="8px" height="8px">
                         <img src="./assets/images/point-2.png" width="8px" height="8px">
