--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div class="block-hero-content-wrap">
                   <p class="block-hero-date">08.08.2021</p>
                 <div class="block-hero-line"></div>
-                <p class="block-hero-description">Progressively incentivize cooperative systems through technically sound
+                <p class="block-hero-content">Progressively incentivize cooperative systems through technically sound
                     functionalities. The credibly productivate seamless data.</p>
                 </div>
                     <div class="block-hero-circle">
@@ -34,7 +34,7 @@
             </section>
             <!-- Hero Section -->
 
-            <section class="block-popular container">
+            <section class="block-popular-container">
                 <h2>Popular topics</h2>
                 <div class="block-popular__nav">
                     <div class="block-popular__left-nav">
@@ -54,14 +54,70 @@
 
                 <div class="Popular-card-section">
                     <div class="Popular-card">
-                      <img src="./assets/images/popular-blog-img-1.jpg" alt="Card image" width="310px" height="280px" border-radius="5px">
+                      <img src="./assets/images/dream-destination-visit.jpg" alt="Card image" width="310px" height="280px" border-radius="5px">
                       <p class="Popular-card-date">08.08.2021</p>
                         <h4 class="Popular-card-header">Dream destinations to visit thisyear in Paris</h4>
                         <p class="Popular-card-description">Progressively incentivize cooperative systems through technically sound
                           functionalities. Credibly productivate seamless data with flexible schemas.</p>
                     </div>
 
-                    <div class="Popular-card-1">
+                    <div class="Popular-card">
+                      <img src="./assets/images/breathtaking-first-person.jpg" alt="Card image" width="310px" height="280px" border-radius="5px">
+                      <p class="Popular-card-date">08.08.2021</p>
+                        <h4 class="Popular-card-header">Dream destinations to visit thisyear in Paris</h4>
+                        <p class="Popular-card-description">Progressively incentivize cooperative systems through technically sound
+                          functionalities. Credibly productivate seamless data with flexible schemas.</p>
+                    </div>
+
+                    <div class="Popular-card">
+                      <img src="./assets/images/what-collectors-need-know.jpg" alt="Card image" width="310px" height="280px" border-radius="5px">
+                      <p class="Popular-card-date">08.08.2021</p>
+                        <h4 class="Popular-card-header">Dream destinations to visit thisyear in Paris</h4>
+                        <p class="Popular-card-description">Progressively incentivize cooperative systems through technically sound
+                          functionalities. Credibly productivate seamless data with flexible schemas.</p>
+                    </div>
+
+                    <div class="Popular-card">
+                      <img src="./assets/images/instagram-artists-great-photograpgy.jpg" alt="Card image" width="310px" height="280px" border-radius="5px">
+                      <p class="Popular-card-date">08.08.2021</p>
+                        <h4 class="Popular-card-header">Dream destinations to visit thisyear in Paris</h4>
+                        <p class="Popular-card-description">Progressively incentivize cooperative systems through technically sound
+                          functionalities. Credibly productivate seamless data with flexible schemas.</p>
+                    </div>
+
+                    <div class="Popular-card">
+                      <img src="./assets/images/thins-to-know-before-visiting.jpg" alt="Card image" width="310px" height="280px" border-radius="5px">
+                      <p class="Popular-card-date">08.08.2021</p>
+                        <h4 class="Popular-card-header">Dream destinations to visit thisyear in Paris</h4>
+                        <p class="Popular-card-description">Progressively incentivize cooperative systems through technically sound
+                          functionalities. Credibly productivate seamless data with flexible schemas.</p>
+                    </div>
+
+                    <div class="Popular-card">
+                      <img src="./assets/images/nina-smith-vibrant-work.jpg" alt="Card image" width="310px" height="280px" border-radius="5px">
+                      <p class="Popular-card-date">08.08.2021</p>
+                        <h4 class="Popular-card-header">Dream destinations to visit thisyear in Paris</h4>
+                        <p class="Popular-card-description">Progressively incentivize cooperative systems through technically sound
+                          functionalities. Credibly productivate seamless data with flexible schemas.</p>
+                    </div>
+
+                    <div class="Popular-card">
+                      <img src="./assets/images/richard-norton-photorealistic.jpg" alt="Card image" width="310px" height="280px" border-radius="5px">
+                      <p class="Popular-card-date">08.08.2021</p>
+                        <h4 class="Popular-card-header">Dream destinations to visit thisyear in Paris</h4>
+                        <p class="Popular-card-description">Progressively incentivize cooperative systems through technically sound
+                          functionalities. Credibly productivate seamless data with flexible schemas.</p>
+                    </div>
+
+                    <div class="Popular-card">
+                      <img src="./assets/images/25-quality-collectors-toys.jpg" alt="Card image" width="310px" height="280px" border-radius="5px">
+                      <p class="Popular-card-date">08.08.2021</p>
+                        <h4 class="Popular-card-header">Dream destinations to visit thisyear in Paris</h4>
+                        <p class="Popular-card-description">Progressively incentivize cooperative systems through technically sound
+                          functionalities. Credibly productivate seamless data with flexible schemas.</p>
+                    </div>
+
+                    <!-- <div class="Popular-card-1">
                         <img src="./assets/images/popular-blog-img-1.jpg" alt="Card image" width="310px" height="280px" border-radius="5px">
                         <p class="Popular-card-date">08.08.2021</p>
                           <h4 class="Popular-card-header">Dream destinations to visit thisyear in Paris</h4>
@@ -115,7 +171,7 @@
                           <h4 class="Popular-card-header">Dream destinations to visit thisyear in Paris</h4>
                           <p class="Popular-card-description">Progressively incentivize cooperative systems through technically sound
                             functionalities. Credibly productivate seamless data with flexible schemas.</p>
-                      </div>
+                      </div> -->
                   </div>
                 
             </section>
