create fashion section

--- a/index.html
+++ b/index.html
@@ -64,15 +64,16 @@
                     <div class="Popular-card">
                       <img src="./assets/images/breathtaking-first-person.jpg" alt="Card image" width="310px" height="280px" border-radius="5px">
                       <p class="Popular-card-date">08.08.2021</p>
-                        <h4 class="Popular-card-header">Dream destinations to visit thisyear in Paris</h4>
-                        <p class="Popular-card-description">Progressively incentivize cooperative systems through technically sound
-                          functionalities. Credibly productivate seamless data with flexible schemas.</p>
+                        <h4 class="Popular-card-header">Breathtaking first-person photos around Europe</h4>
+                        <p class="Popular-card-description">Progressively incentivize cooperative systems through
+                          technically sound functionalities. Credibly productivate
+                          seamless data with flexible schemas.</p>
                     </div>
 
                     <div class="Popular-card">
                       <img src="./assets/images/what-collectors-need-know.jpg" alt="Card image" width="310px" height="280px" border-radius="5px">
                       <p class="Popular-card-date">08.08.2021</p>
-                        <h4 class="Popular-card-header">Dream destinations to visit thisyear in Paris</h4>
+                        <h4 class="Popular-card-header">What collectors need to know about authenticity</h4>
                         <p class="Popular-card-description">Progressively incentivize cooperative systems through technically sound
                           functionalities. Credibly productivate seamless data with flexible schemas.</p>
                     </div>
@@ -80,7 +81,7 @@
                     <div class="Popular-card">
                       <img src="./assets/images/instagram-artists-great-photograpgy.jpg" alt="Card image" width="310px" height="280px" border-radius="5px">
                       <p class="Popular-card-date">08.08.2021</p>
-                        <h4 class="Popular-card-header">Dream destinations to visit thisyear in Paris</h4>
+                        <h4 class="Popular-card-header">Instagram artists with great photography skills</h4>
                         <p class="Popular-card-description">Progressively incentivize cooperative systems through technically sound
                           functionalities. Credibly productivate seamless data with flexible schemas.</p>
                     </div>
@@ -88,7 +89,7 @@
                     <div class="Popular-card">
                       <img src="./assets/images/thins-to-know-before-visiting.jpg" alt="Card image" width="310px" height="280px" border-radius="5px">
                       <p class="Popular-card-date">08.08.2021</p>
-                        <h4 class="Popular-card-header">Dream destinations to visit thisyear in Paris</h4>
+                        <h4 class="Popular-card-header">Thins to know before visiting Cave in Germany</h4>
                         <p class="Popular-card-description">Progressively incentivize cooperative systems through technically sound
                           functionalities. Credibly productivate seamless data with flexible schemas.</p>
                     </div>
@@ -96,7 +97,7 @@
                     <div class="Popular-card">
                       <img src="./assets/images/nina-smith-vibrant-work.jpg" alt="Card image" width="310px" height="280px" border-radius="5px">
                       <p class="Popular-card-date">08.08.2021</p>
-                        <h4 class="Popular-card-header">Dream destinations to visit thisyear in Paris</h4>
+                        <h4 class="Popular-card-header">Nina Smith vibrant work collab with Nike Dunk</h4>
                         <p class="Popular-card-description">Progressively incentivize cooperative systems through technically sound
                           functionalities. Credibly productivate seamless data with flexible schemas.</p>
                     </div>
@@ -104,7 +105,7 @@
                     <div class="Popular-card">
                       <img src="./assets/images/richard-norton-photorealistic.jpg" alt="Card image" width="310px" height="280px" border-radius="5px">
                       <p class="Popular-card-date">08.08.2021</p>
-                        <h4 class="Popular-card-header">Dream destinations to visit thisyear in Paris</h4>
+                        <h4 class="Popular-card-header">Richard Norton photorealistic rendering as real photos</h4>
                         <p class="Popular-card-description">Progressively incentivize cooperative systems through technically sound
                           functionalities. Credibly productivate seamless data with flexible schemas.</p>
                     </div>
@@ -112,70 +113,21 @@
                     <div class="Popular-card">
                       <img src="./assets/images/25-quality-collectors-toys.jpg" alt="Card image" width="310px" height="280px" border-radius="5px">
                       <p class="Popular-card-date">08.08.2021</p>
-                        <h4 class="Popular-card-header">Dream destinations to visit thisyear in Paris</h4>
+                        <h4 class="Popular-card-header">25 quality collectors toys inspired by famous films</h4>
                         <p class="Popular-card-description">Progressively incentivize cooperative systems through technically sound
                           functionalities. Credibly productivate seamless data with flexible schemas.</p>
                     </div>
-
-                    <!-- <div class="Popular-card-1">
-                        <img src="./assets/images/popular-blog-img-1.jpg" alt="Card image" width="310px" height="280px" border-radius="5px">
-                        <p class="Popular-card-date">08.08.2021</p>
-                          <h4 class="Popular-card-header">Dream destinations to visit thisyear in Paris</h4>
-                          <p class="Popular-card-description">Progressively incentivize cooperative systems through technically sound
-                            functionalities. Credibly productivate seamless data with flexible schemas.</p>
-                      </div>
-
-                      <div class="Popular-card-1">
-                        <img src="./assets/images/popular-blog-img-1.jpg" alt="Card image" width="310px" height="280px" border-radius="5px">
-                        <p class="Popular-card-date">08.08.2021</p>
-                          <h4 class="Popular-card-header">Dream destinations to visit thisyear in Paris</h4>
-                          <p class="Popular-card-description">Progressively incentivize cooperative systems through technically sound
-                            functionalities. Credibly productivate seamless data with flexible schemas.</p>
-                      </div>
-
-                      <div class="Popular-card-1">
-                        <img src="./assets/images/popular-blog-img-1.jpg" alt="Card image" width="310px" height="280px" border-radius="5px">
-                        <p class="Popular-card-date">08.08.2021</p>
-                          <h4 class="Popular-card-header">Dream destinations to visit thisyear in Paris</h4>
-                          <p class="Popular-card-description">Progressively incentivize cooperative systems through technically sound
-                            functionalities. Credibly productivate seamless data with flexible schemas.</p>
-                      </div>
-
-                      <div class="Popular-card">
-                        <img src="./assets/images/popular-blog-img-1.jpg" alt="Card image" width="310px" height="280px" border-radius="5px">
-                        <p class="Popular-card-date">08.08.2021</p>
-                          <h4 class="Popular-card-header">Dream destinations to visit thisyear in Paris</h4>
-                          <p class="Popular-card-description">Progressively incentivize cooperative systems through technically sound
-                            functionalities. Credibly productivate seamless data with flexible schemas.</p>
-                      </div>
-
-                      <div class="Popular-card-1">
-                        <img src="./assets/images/popular-blog-img-1.jpg" alt="Card image" width="310px" height="280px" border-radius="5px">
-                        <p class="Popular-card-date">08.08.2021</p>
-                          <h4 class="Popular-card-header">Dream destinations to visit thisyear in Paris</h4>
-                          <p class="Popular-card-description">Progressively incentivize cooperative systems through technically sound
-                            functionalities. Credibly productivate seamless data with flexible schemas.</p>
-                      </div>
-
-                      <div class="Popular-card-1">
-                        <img src="./assets/images/popular-blog-img-1.jpg" alt="Card image" width="310px" height="280px" border-radius="5px">
-                        <p class="Popular-card-date">08.08.2021</p>
-                          <h4 class="Popular-card-header">Dream destinations to visit thisyear in Paris</h4>
-                          <p class="Popular-card-description">Progressively incentivize cooperative systems through technically sound
-                            functionalities. Credibly productivate seamless data with flexible schemas.</p>
-                      </div>
-
-                      <div class="Popular-card-1">
-                        <img src="./assets/images/popular-blog-img-1.jpg" alt="Card image" width="310px" height="280px" border-radius="5px">
-                        <p class="Popular-card-date">08.08.2021</p>
-                          <h4 class="Popular-card-header">Dream destinations to visit thisyear in Paris</h4>
-                          <p class="Popular-card-description">Progressively incentivize cooperative systems through technically sound
-                            functionalities. Credibly productivate seamless data with flexible schemas.</p>
-                      </div> -->
                   </div>
-                
             </section>
             <!-- Popular Section -->
+
+            <section class="fashion-container">
+              <button class="fashion-btn">Fashion</button>
+              <h2 class="fasion-header">Richird Norton photorealistic rendering as real photos</h2>
+              <p class="fashion-content">Progressively incentivize cooperative systems through technically sound functionalities. The credibly productivate seamless data.</p>
+              <p class="fashion-line"></p>
+              <p class="fashion-date">08.08.2021</p>
+            </section>
 
         </main>
         <!-- Site Content -->
