--- a/index.html
+++ b/index.html
@@ -128,6 +128,31 @@
               <p class="fashion-line"></p>
               <p class="fashion-date">08.08.2021</p>
             </section>
+            <!-- fashion section -->
+
+            <section class="Editor-Pick-container">
+              <h2 class="editor-pick-header">Editor<sup>,</sup> Pick</h2>
+              <div class="editor-pick-card-section">
+                <div class="editor-pick-card-1">
+                  <p class="editor-pick-date">08.08.2021</p>
+                  <h4 class="editor-pick-card-header">Richird Norton photorealistic rendering as real photos</h4>
+                  <p class="editor-pick-card-description">Progressively incentivize cooperative systems through technically sound functionalities. The credibly productivate seamless data.</p>
+                </div>
+
+                <div class="editor-pick-card-2">
+                  <p class="editor-pick-date">08.08.2021</p>
+                  <h4 class="editor-pick-card-header">Richird Norton photorealistic rendering as real photos</h4>
+                  <p class="editor-pick-card-description">Progressively incentivize cooperative systems through technically sound functionalities. The credibly productivate seamless data.</p>
+                </div>
+
+                <div class="editor-pick-card-3">
+                  <p class="editor-pick-date">08.08.2021</p>
+                  <h4 class="editor-pick-card-header">Richird Norton photorealistic rendering as real photos</h4>
+                  <p class="editor-pick-card-description">Progressively incentivize cooperative systems through technically sound functionalities. The credibly productivate seamless data.</p>
+                </div>
+
+              </div>
+            </section>
 
         </main>
         <!-- Site Content -->
