create header section

--- a/index.html
+++ b/index.html
@@ -10,8 +10,24 @@
 
 <body>
     <div class="site-wrapper">
-        <header class="site-content">
-            Header content goes here...
+        <header class="header-content">
+          <nav>
+            <label class="logo">RUNO</label>
+            <ul>
+              <li id="home"><a href="#">Home</a></li>
+              <li id="header-about"><a href="#">About</a></li>
+              <li id="articles"><a href="#">Articles</a></li>
+              <li id="contact-us"><a href="#">Contact Us</a></li>
+              <li class="separator">|</li>
+              <li><a href="#"><img src="./assets/images/facebook.png" width="20px" height="20px"></a></li>
+              <li><a href="#"><img src="./assets/images/twitter.png" width="20px" height="20px"></a></li>
+              <li><a href="#"><img src="./assets/images/youtube.png" width="20px" height="20px"></a></li>
+              <li><a href="#"><img src="./assets/images/pinterest.png" width="20px" height="20px"></a></li>
+              <li><a href="#"><img src="./assets/images/behance.png" width="20px" height="20px"></a></li>
+              <li class="separator">|</li>
+              <li><a href="#"><img src="./assets/images/search-icon.png" width="20px" height="20px"></a></li></li>
+            </ul>
+        </nav>
         </header>
         <!-- Site Header -->
 
