modified the index and css file

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
         <main class="site-content">
           <section class="hero-section">
             <div class="hero-image">
-              <button class="hero-btn">ADVENTURE</button>
+              <div class="hero-container">
+                <button class="hero-btn">ADVENTURE</button>
               <h1>Richird Norton photorealistic rendering as real photos</h1>
               <div class="hero-content-wrapper">
                 <P class="hero-date">08.08.2021</P>
@@ -48,12 +49,14 @@
                 <img src="./assets/images/point-2.png" width="8px" height="8px">
                 <img src="./assets/images/point-3.png" width="8px" height="8px">
               </div>
+              </div>
         
             </div>
           </section>
             <!-- Hero Section -->
 
-            <section class="block-popular-container">
+            <section class="block-popular">
+              <div class="block-popular-container">
                 <h2>Popular topics</h2>
                 <div class="block-popular__nav">
                     <div class="block-popular__left-nav">
@@ -73,7 +76,7 @@
 
                 <div class="Popular-card-section">
                     <div class="Popular-card">
-                      <img src="./assets/images/dream-destination-visit.jpg" alt="Card image" width="310px" height="280px" border-radius="5px">
+                      <img src="./assets/images/dream-destination-visit.jpg" alt="Card image"  border-radius="5px">
                       <p class="Popular-card-date">08.08.2021</p>
                         <h4 class="Popular-card-header">Dream destinations to visit thisyear in Paris</h4>
                         <p class="Popular-card-description">Progressively incentivize cooperative systems through technically sound
@@ -81,7 +84,7 @@
                     </div>
 
                     <div class="Popular-card">
-                      <img src="./assets/images/breathtaking-first-person.jpg" alt="Card image" width="310px" height="280px" border-radius="5px">
+                      <img src="./assets/images/breathtaking-first-person.jpg" alt="Card image"  border-radius="5px">
                       <p class="Popular-card-date">08.08.2021</p>
                         <h4 class="Popular-card-header">Breathtaking first-person photos around Europe</h4>
                         <p class="Popular-card-description">Progressively incentivize cooperative systems through
@@ -90,7 +93,7 @@
                     </div>
 
                     <div class="Popular-card">
-                      <img src="./assets/images/what-collectors-need-know.jpg" alt="Card image" width="310px" height="280px" border-radius="5px">
+                      <img src="./assets/images/what-collectors-need-know.jpg" alt="Card image" border-radius="5px">
                       <p class="Popular-card-date">08.08.2021</p>
                         <h4 class="Popular-card-header">What collectors need to know about authenticity</h4>
                         <p class="Popular-card-description">Progressively incentivize cooperative systems through technically sound
@@ -98,7 +101,7 @@
                     </div>
 
                     <div class="Popular-card">
-                      <img src="./assets/images/instagram-artists-great-photograpgy.jpg" alt="Card image" width="310px" height="280px" border-radius="5px">
+                      <img src="./assets/images/instagram-artists-great-photograpgy.jpg" alt="Card image"  border-radius="5px">
                       <p class="Popular-card-date">08.08.2021</p>
                         <h4 class="Popular-card-header">Instagram artists with great photography skills</h4>
                         <p class="Popular-card-description">Progressively incentivize cooperative systems through technically sound
@@ -106,7 +109,7 @@
                     </div>
 
                     <div class="Popular-card">
-                      <img src="./assets/images/thins-to-know-before-visiting.jpg" alt="Card image" width="310px" height="280px" border-radius="5px">
+                      <img src="./assets/images/thins-to-know-before-visiting.jpg" alt="Card image"  border-radius="5px">
                       <p class="Popular-card-date">08.08.2021</p>
                         <h4 class="Popular-card-header">Thins to know before visiting Cave in Germany</h4>
                         <p class="Popular-card-description">Progressively incentivize cooperative systems through technically sound
@@ -114,7 +117,7 @@
                     </div>
 
                     <div class="Popular-card">
-                      <img src="./assets/images/nina-smith-vibrant-work.jpg" alt="Card image" width="310px" height="280px" border-radius="5px">
+                      <img src="./assets/images/nina-smith-vibrant-work.jpg" alt="Card image"  border-radius="5px">
                       <p class="Popular-card-date">08.08.2021</p>
                         <h4 class="Popular-card-header">Nina Smith vibrant work collab with Nike Dunk</h4>
                         <p class="Popular-card-description">Progressively incentivize cooperative systems through technically sound
@@ -122,7 +125,7 @@
                     </div>
 
                     <div class="Popular-card">
-                      <img src="./assets/images/richard-norton-photorealistic.jpg" alt="Card image" width="310px" height="280px" border-radius="5px">
+                      <img src="./assets/images/richard-norton-photorealistic.jpg" alt="Card image"  border-radius="5px">
                       <p class="Popular-card-date">08.08.2021</p>
                         <h4 class="Popular-card-header">Richard Norton photorealistic rendering as real photos</h4>
                         <p class="Popular-card-description">Progressively incentivize cooperative systems through technically sound
@@ -130,13 +133,14 @@
                     </div>
 
                     <div class="Popular-card">
-                      <img src="./assets/images/25-quality-collectors-toys.jpg" alt="Card image" width="310px" height="280px" border-radius="5px">
+                      <img src="./assets/images/25-quality-collectors-toys.jpg" alt="Card image"  border-radius="5px">
                       <p class="Popular-card-date">08.08.2021</p>
                         <h4 class="Popular-card-header">25 quality collectors toys inspired by famous films</h4>
                         <p class="Popular-card-description">Progressively incentivize cooperative systems through technically sound
                           functionalities. Credibly productivate seamless data with flexible schemas.</p>
                     </div>
                   </div>
+                </div>
             </section>
             <!-- Popular Section -->
 
