--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="site-wrapper">
-        <header class="header-content">
+        <!-- <header class="header-content">
           <nav>
             <label class="logo">RUNO</label>
             <ul>
@@ -28,7 +28,7 @@
               <li><a href="#"><img src="./assets/images/search-icon.png" width="20px" height="20px"></a></li></li>
             </ul>
         </nav>
-        </header>
+        </header> -->
         <!-- Site Header -->
 
         <main class="site-content">
