--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 
 <body>
     <div class="site-wrapper">
-        <!-- <header class="header-content">
-            <nav>
-              <label class="logo">RUNO</label>
-              <ul>
-                <li id="home"><a href="#">Home</a></li>
-                <li id="header-about"><a href="#">About</a></li>
-                <li id="articles"><a href="#">Articles</a></li>
-                <li id="contact-us"><a href="#">Contact Us</a></li>
+      <header>
+        <nav>
+         <label class="logo">RUNO</label>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Articles</a></li>
+                <li><a href="#">Contact Us</a></li>
                 <li class="separator">|</li>
                 <li><a href="#"><img src="./assets/images/facebook.png" width="20px" height="20px"></a></li>
                 <li><a href="#"><img src="./assets/images/twitter.png" width="20px" height="20px"></a></li>
@@ -26,9 +26,9 @@
                 <li><a href="#"><img src="./assets/images/behance.png" width="20px" height="20px"></a></li>
                 <li class="separator">|</li>
                 <li><a href="#"><img src="./assets/images/search-icon.png" width="20px" height="20px"></a></li>
-              </ul>
-          </nav>
-        </header> -->
+            </ul>
+        </nav>
+    </header>
         <!-- Site Header -->
 
         <main class="site-content">
