create hamburger menu

--- a/index.html
+++ b/index.html
@@ -10,24 +10,34 @@
 
 <body>
     <div class="site-wrapper">
-      <header>
-        <nav>
-         <label class="logo">RUNO</label>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Articles</a></li>
-                <li><a href="#">Contact Us</a></li>
-                <li class="separator">|</li>
-                <li><a href="#"><img src="./assets/images/facebook.png" width="20px" height="20px"></a></li>
-                <li><a href="#"><img src="./assets/images/twitter.png" width="20px" height="20px"></a></li>
-                <li><a href="#"><img src="./assets/images/youtube.png" width="20px" height="20px"></a></li>
-                <li><a href="#"><img src="./assets/images/pinterest.png" width="20px" height="20px"></a></li>
-                <li><a href="#"><img src="./assets/images/behance.png" width="20px" height="20px"></a></li>
-                <li class="separator">|</li>
-                <li><a href="#"><img src="./assets/images/search-icon.png" width="20px" height="20px"></a></li>
-            </ul>
-        </nav>
+      <header class="header">
+        <div class="container">
+          <nav id="navBar">
+            <label class="logo">RUNO</label>
+              <div class="heder-menu-wrapper">
+                <button class="hamBurger-close" id="hamBurger-close">close</button>                
+                <ul class="heder-menu">
+                  <li><a href="#">Home</a></li>
+                  <li><a href="#">About</a></li>
+                  <li><a href="#">Articles</a></li>
+                  <li><a href="#">Contact Us</a></li>
+                  <li class="separator">|</li>
+                  <li><a href="#"><img src="./assets/images/facebook.png" width="20px" height="20px"></a></li>
+                  <li><a href="#"><img src="./assets/images/twitter.png" width="20px" height="20px"></a></li>
+                  <li><a href="#"><img src="./assets/images/youtube.png" width="20px" height="20px"></a></li>
+                  <li><a href="#"><img src="./assets/images/pinterest.png" width="20px" height="20px"></a></li>
+                  <li><a href="#"><img src="./assets/images/behance.png" width="20px" height="20px"></a></li>
+                  <li class="separator">|</li>
+                  <li><a href="#"><img src="./assets/images/search-icon.png" width="20px" height="20px"></a></li>
+              </ul>
+              </div>
+               <div class="hamburger" id="hamBurger">
+                <span></span>
+                <span></span>
+                <span></span>
+               </div>
+           </nav>
+        </div>
     </header>
         <!-- Site Header -->
 
@@ -242,7 +252,7 @@
           <div class="footer-lower-section">
             <div class="container">
             <div class="footer-lower-section-wrapper">
-              <p class="copyright">2021 | RUNO Publisher Studio</p>
+              <p class="copyright">2025 | RUNO Publisher Studio</p>
               <p class="Subscribe">Subscribe Now</p>
             </div>
             </div>
@@ -250,6 +260,7 @@
         </footer>
         <!-- Site Footer -->
     </div>
+    <script src="./index.js"></script>
 </body>
 
 </html>
