style hambuerger menu clos

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <nav id="navBar">
             <label class="logo">RUNO</label>
               <div class="heder-menu-wrapper">
-                <button class="hamBurger-close" id="hamBurger-close">close</button>                
+                <button class="hamBurger-close" id="hamBurger-close"><img src="./assets/images/cross-sign.jpg" alt="cross" width="40px" height="40px"></button>                
                 <ul class="heder-menu">
                   <li><a href="#">Home</a></li>
                   <li><a href="#">About</a></li>
